k8s/clusters/cluster-0/manifests/system/kyverno/policies/remove-cpu-limit.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remove-cpu-limit
spec:
  rules:
    - name: remove-cpu-limit
      match:
        any:
          - resources:
              kinds:
                - Pod
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - (name): "*"
                resources:
                  limits:
                    cpu: null

            containers:
              - (name): "*"
                resources:
                  limits:
                    cpu: null
